<resources>
    <string name="app_name">HomeElectronics</string>
    <string name="app">家电管家王</string>
    <string name="app_type">商户端</string>
    <string name="phone_num">手机号：</string>
    <string name="scanner_num">请输入手机号</string>
    <string name="password">密    码：</string>
    <string name="scanner_pwd">请输入密码</string>
    <string name="join_in">申请成为合作商</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login">登录</string>
    <string name="decide">确定</string>
    <string name="next">下一步</string>
    <string name="getcode">获取验证码(60s)</string>
    <string name="code">验证码</string>
    <string name="contact">联系人</string>
    <string name="contact_phone">联系电话</string>
    <string name="commercial">商户</string>
    <string name="remark">备注信息</string>
    <string name="commercial_adress">商户地址</string>
    <string name="decide_know">确认</string>
    <string name="home_electronics_center">家电服务中心</string>
</resources>
