<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:id="@+id/lay"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"

    tools:context="com.yidan.homeelectronics.activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/x250"
            android:layout_height="@dimen/x250"
            android:layout_centerInParent="true"
            android:background="#ec3e" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:text="@string/app"
            android:textColor="@color/icon_blue"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:text="@string/app_type"
            android:textColor="@color/icon_blue"
            android:textSize="25sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x150"
            android:background="@drawable/drawable_lin"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/phone_num"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:textColor="@color/black"
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/scanner_num"
                android:inputType="number"
                android:textColorHint="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x150"
            android:layout_marginTop="1dp"
            android:background="@drawable/drawable_lin"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <EditText
                    android:textColor="@color/black"
                    android:id="@+id/pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/scanner_pwd"
                    android:inputType="textPassword"
                    android:textColorHint="@color/gray" />

                <ImageView
                    android:id="@+id/eye"
                    android:layout_width="@dimen/x40"
                    android:layout_height="@dimen/x40"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#ec3" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginTop="@dimen/x20"
            android:text="@string/forget_pwd"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x100"
            android:layout_marginTop="@dimen/x40"
            android:background="@drawable/azure_circle"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/join"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x100"
            android:layout_marginTop="@dimen/x60"
            android:background="@drawable/no_solid"
            android:gravity="center"
            android:text="@string/join_in"
            android:textColor="@color/icon_blue"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
