<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/little_gray"
    android:fitsSystemWindows="true"
    tools:context="com.yidan.homeelectronics.activity.ForgetPwdActivity">



<LinearLayout
    android:layout_marginTop="@dimen/x50"
    android:background="@drawable/white_lin"
    android:layout_marginRight="@dimen/x60"
    android:layout_marginLeft="@dimen/x60"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="@dimen/x500">

    <LinearLayout
        android:layout_marginRight="@dimen/x30"
        android:layout_marginLeft="@dimen/x30"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/drawable_lin"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/phone_num"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/scanner_num"
            android:inputType="number"
            android:textColorHint="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="@dimen/x30"
        android:layout_marginLeft="@dimen/x30"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="1dp"
        android:background="@drawable/drawable_lin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="24"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/scanner_pwd"
                android:inputType="textPassword"
                android:textColorHint="@color/gray" />

            <TextView
                android:text="@string/getcode"
                android:textColor="@color/gray"
                android:id="@+id/getcode"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/x50"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@drawable/no_solid_gray" />

        </LinearLayout>



</LinearLayout>

<RelativeLayout
    android:layout_weight="3"

    android:layout_width="match_parent"
    android:layout_height="0dp">

    <Button
        android:id="@+id/next"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:text="@string/next"
        android:background="@drawable/azure_circle"
       android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x90" />

</RelativeLayout>

</LinearLayout>


</LinearLayout>